--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/css/style.css"/>
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/over/250"/>
 
   <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
