Add "Features" section on homepage

--- a/views/index.html
+++ b/views/index.html
@@ -46,8 +46,8 @@
       </div>
       <div class="col-sm-6 col-lg-6">
         <h4>Особенности</h4>
-        <p>Философия, следовательно, притягивает возрастающий натуральный логарифм, явно демонстрируя всю чушь вышесказанного. Функция выпуклая книзу требовальна к креативу. Повышение жизненных стандартов необходимо и достаточно.</p>
-        <p>Внутрифирменная реклама, конечно, категорически оправдывает эмпирический закон исключённого третьего, дальнейшие выкладки оставим студентам в качестве несложной домашней работы.</p>
+        <p>Посты собираются с&nbsp;первой страницы d3.ru. Поэтому, если пост получил рейтинг выше порога, но до&nbsp;прихода вашего RSS-агрегатора успел уйти с&nbsp;первой страницы, то вы его не&nbsp;увидите.</p>
+        <p>Формируя ленту, видео c&nbsp;YouTube мы заменяем на&nbsp;картинку (со&nbsp;ссылкой на&nbsp;ролик). Потому&nbsp;что большинство RSS-агрегаторов при импорте записей вырезают &lt;iframe&gt; с&nbsp;видео (как потенциально опасный контент), а&nbsp;картинки не&nbsp;вырезают.</p>
       </div>
     </div>
   </div>
