--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1>RSS для d3.ru</h1>
-      <p class="lead">Здесь вы найдёте ленты для&nbsp;лучших постов d3.ru (с&nbsp;рейтингом выше желаемого порога).</p>
+      <p class="lead">Здесь вы найдёте ленты для&nbsp;лучших постов <a href="http://d3.ru/">d3.ru</a> (с&nbsp;рейтингом выше желаемого порога).</p>
       <p class="lead">
         <a href="/over/100" class="btn btn-warning">Больше 100</a>
         <a href="/over/250" class="btn btn-primary">Больше 250</a>
@@ -46,7 +46,7 @@
       </div>
       <div class="col-sm-6 col-lg-6">
         <h4>Особенности</h4>
-        <p>Посты собираются с&nbsp;первой страницы d3.ru. Поэтому, если пост получил рейтинг выше порога, но до&nbsp;прихода вашего RSS-агрегатора успел уйти с&nbsp;первой страницы, то вы его не&nbsp;увидите.</p>
+        <p>Посты собираются с&nbsp;первой страницы <a href="http://d3.ru/">d3.ru</a>. Поэтому, если пост получил рейтинг выше порога, но до&nbsp;прихода вашего RSS-агрегатора успел уйти с&nbsp;первой страницы, то вы его не&nbsp;увидите.</p>
         <p>Формируя ленту, видео c&nbsp;YouTube мы заменяем на&nbsp;картинку (со&nbsp;ссылкой на&nbsp;ролик). Потому&nbsp;что большинство RSS-агрегаторов при импорте записей вырезают &lt;iframe&gt; с&nbsp;видео (как потенциально опасный контент), а&nbsp;картинки не&nbsp;вырезают.</p>
       </div>
     </div>
