--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,8 +19,8 @@ body {
 }
 @media (max-width: 767px) {
   #body {
-    margin-bottom: -120px;
-    padding-bottom: 120px;
+    margin-bottom: -110px;
+    padding-bottom: 110px;
   }
 }
 
@@ -33,6 +33,7 @@ body {
 @media (max-width: 767px) {
   #footer {
     height: 90px;
+    margin-top: 20px;
   }
 }
 
@@ -48,18 +49,26 @@ body {
 .jumbotron {
   font-size: inherit;
   text-align: center;
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   margin-top: 30px;
+  margin-bottom: 0;
 }
 @media (max-width: 767px) {
   .jumbotron {
+    padding-top: 15px;
+    padding-bottom: 15px;
     margin-top: 15px;
   }
 }
 
-.btn {
-  padding: 8px 12px;
-  font-weight: normal;
+h4 {
+  margin-top: 40px;
+}
+@media (max-width: 767px) {
+  h4 {
+    margin-top: 30px;
+  }
 }
 
 .credits {
